force-app/main/default/objects/ccrz__E_CartItem__c/ccrz__E_CartItem__c.object-meta.xml
<CustomObject>
    <description>Cart Items</description>
    <label>CC Cart Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CartItemAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>