force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__AdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AdjustmentAmount__c</fullName>
    <description>Additional Adjustment from the CSR</description>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>