force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__CartItemId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartItemId__c</fullName>
    <description>External id that can be used for data loads.</description>
    <externalId>true</externalId>
    <label>Cart Item Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>