force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Comments__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Comments__c</fullName>
    <description>User entered comments on the line item.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>