force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__ExtSKU__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExtSKU__c</fullName>
    <description>Defines a display SKU to be used instead of the referenced Product SKU for display in the cart/order.</description>
    <externalId>true</externalId>
    <label>External SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>