force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__ItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ItemStatus__c</fullName>
    <description>Cart item status driven by inventory rules.  With inventory enabled if there is insufficient inventory then the item will be marked Pre-Order.  Otherwise it will be Available.</description>
    <label>Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Pre-Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>