force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__OriginalQuantity__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OriginalQuantity__c</fullName>
    <description>Stores the original child quantity per unit for Kits, Bundles, and Dynamic Kits.</description>
    <label>Original Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>