force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NOT USED</description>
    <label>Parent Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Cart Items (ParentProductID)</relationshipLabel>
    <relationshipName>E_CartItems</relationshipName>
    <type>Lookup</type>
</CustomField>