force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__PricingModifierTypes__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PricingModifierTypes__c</fullName>
    <description>Semi-Colon delimited List of Modifier types that are affecting the pricing of this Cart Item</description>
    <inlineHelpText>Semi-Colon delimited List of Modifier types that are affecting the pricing of this Cart Item</inlineHelpText>
    <label>Pricing Modifier Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>