force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the product for this line item.</description>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Cart Items (ProductID)</relationshipLabel>
    <relationshipName>E_CartItem2</relationshipName>
    <type>Lookup</type>
</CustomField>