force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__ProductType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductType__c</fullName>
    <description>ProductType same as CartItemType</description>
    <label>ProductType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>