force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Quantity__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Quantity of the line item.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>