force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__SecondaryAttr__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SecondaryAttr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The secondary attribute selected for the cart item&apos;s related cc product</description>
    <label>Secondary Attribute</label>
    <referenceTo>ccrz__E_Attribute__c</referenceTo>
    <relationshipLabel>CC Cart Items (Secondary Attribute)</relationshipLabel>
    <relationshipName>ccCartItemsSec</relationshipName>
    <type>Lookup</type>
</CustomField>