force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Seller__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Seller this Cart Item is to be purchased from.</description>
    <label>Seller</label>
    <referenceTo>ccrz__E_Seller__c</referenceTo>
    <relationshipLabel>CC Cart Items</relationshipLabel>
    <relationshipName>E_CartItems</relationshipName>
    <type>Lookup</type>
</CustomField>