force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__StoreID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StoreID__c</fullName>
    <description>The storefront to which this line and cart belong.</description>
    <label>Store ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>