force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__SubProdTerm__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubProdTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the specific subscription selected.</description>
    <label>SubProdTerm</label>
    <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
    <relationshipLabel>CC Cart Items</relationshipLabel>
    <relationshipName>CC_Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>