force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Subscription_Duration__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Subscription_Duration__c</fullName>
    <description>DEPRECATED</description>
    <inlineHelpText>Duration of the subscription in months.  If this is field is blank, then this cart item is not a subscribed item.</inlineHelpText>
    <label>Subscription Duration (In Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>