force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__Subscription_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Subscription_Frequency__c</fullName>
    <description>DEPRECATED</description>
    <inlineHelpText>The frequency of this subscription in days.  If not selected via the UI, then this value defaults to the Product&apos;s subscription frequency.</inlineHelpText>
    <label>Subscription Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>