force-app/main/default/objects/ccrz__E_CartItem__c/fields/ccrz__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>ccrz__UnitOfMeasure__c</fullName>
    <description>Unit of measure as copied from the product data.</description>
    <label>Unit Of Measure</label>
    <length>32</length>
    <type>Text</type>
</CustomField>