force-app/main/default/objects/ccrz__E_CartItem__c/fields/Custom_Factor__c.field-meta.xml
<CustomField>
    <fullName>Custom_Factor__c</fullName>
    <label>Custom Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>