force-app/main/default/objects/ccrz__E_CartItem__c/fields/EC_Last_Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>EC_Last_Purchased_Date__c</fullName>
    <label>Last Purchased Date</label>
    <type>Date</type>
</CustomField>