force-app/main/default/objects/ccrz__E_CartItem__c/fields/EC_LastPurchasedDateFormatted__c.field-meta.xml
<CustomField>
    <fullName>EC_LastPurchasedDateFormatted__c</fullName>
    <description>To Display on the UI</description>
    <formula>CASE( MONTH( EC_Last_Purchased_Date__c ) ,
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;) +&apos; &apos;+ text(DAY( EC_Last_Purchased_Date__c )) +&apos;, &apos;+ Text(YEAR( EC_Last_Purchased_Date__c ))</formula>
    <label>Last Purchased Date Formatted</label>
    <type>Text</type>
</CustomField>