force-app/main/default/objects/ccrz__E_CartItem__c/fields/Tank_Number__c.field-meta.xml
<CustomField>
    <fullName>Tank_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tank Number</label>
    <referenceTo>Tank_Detail__c</referenceTo>
    <relationshipLabel>CC Cart Items</relationshipLabel>
    <relationshipName>CC_Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>