force-app/main/default/objects/ccrz__E_CartItem__c/fields/Unloading_Point__c.field-meta.xml
<CustomField>
    <fullName>Unloading_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unloading Point</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>CC Cart Items</relationshipLabel>
    <relationshipName>CC_Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>